# iNEXT.3D 1.0.0
Publish public version
- Create functions 'iNEXT3D', 'ggiNEXT3D', 'estimate3D', 'ObsAsy3D', 'ggObsAsy3D', 'DataInfo3D'.
- Create the project and upload to CRAN.

# iNEXT.3D 1.0.1
- Modify errors when incidence raw data is a matrix/data.frame for PD and when phylo tree contains duplicated node labels.

# iNEXT.3D 1.0.2
- Modify errors when size (or level) is zero.

# iNEXT.3D 1.0.2
- Modify errors when size (or level) is zero.

# iNEXT.3D 1.0.3
- Improved color palette generation in `ggiNEXT3D` and `ggObsAsy3D`. This update addresses the limitation of the fixed 8-color palette, enhancing clarity and user experience in data representation.

# iNEXT.3D 1.0.4
- Fix the bootstrap error when samples contain only one species.
- Recover the asymptotic estimation when sample coverage is one.

