@@ -18,5 +18,6 @@ Publish public version
 # iNEXT.3D 1.0.4
 - Fix the bootstrap error when samples contain only one species.
 - Recover the asymptotic estimation when sample coverage is one.
+- Add checking machine when PDtree$node.label and PDtree$tip.label have the same names.
 
 
